Ajustes em classes de dominio e criacao dos inserts nos MAPs.

--- a/BancoInvest.MVC/appsettings.json
+++ b/BancoInvest.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "StringConnection" : "Server=(Local);Database=BancoInvest;Trust_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
