criação do Migration Inicial com 2 usuarios

--- a/BancoInvest.MVC/appsettings.json
+++ b/BancoInvest.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StringConnection" : "Server=(Local);Database=BancoInvest;Trust_Connection=true;"
+    "StringConnection": "Server=(local);Database=BancoInvest;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
