--- a/BancoInvest.MVC/BancoInvest.MVC.csproj
+++ b/BancoInvest.MVC/BancoInvest.MVC.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BancoInvest.Application\BancoInvest.Application.csproj" />
     <ProjectReference Include="..\BancoInvest.Infra.Data\BancoInvest.Infra.Data.csproj" />
     <ProjectReference Include="..\BancoInvest.Infra.IoC\BancoInvest.Infra.IoC.csproj" />
   </ItemGroup>
